<resources>
    <string name="app_name">Pavlok Driving Trainer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="title_activity_homescreen">Homescreen</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="enter_pavlok_username">Enter Pavlok Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_in">Sign In</string>
    <string name="not_a_user_register">Not a user? Register</string>
    <string name="enter_a_username">Enter a username</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="register">Register</string>
    <string name="enter_a_password">Enter a password</string>
    <string name="people_you_would_like_to_notify_when_you_are_texting">People you would like to notify when you are texting</string>
    <string name="add_parent">Add Parent</string>
    <string name="please_enter_a_destination">Please enter a destination</string>
    <string name="please_enter_your_destination">Please enter your destination</string>
    <string name="destination">Destination</string>
    <string name="please_enter_the_parent_name">Please enter the parent name</string>
    <string name="please_enter_the_phone_number_only_numerals">Please enter the phone number (only numerals)</string>
    <string name="please_enter_a_message_to_be_sent_to_people_who_call_you">Please enter a message to be sent to people who call you</string>
    <string name="please_enter_the_text_message">Please enter the text message</string>
    <string name="set_text">Set Text</string>
    <string name="zap_settings">ZAP settings</string>
    <string name="_10">10</string>
    <string name="vibration_settings">Vibration Settings</string>
    <string name="set_settings">Set Settings</string>
    <string name="confirm_destination_and_message">Confirm Destination and Message</string>
    <string name="start_driving">Start Driving!!</string>
    <string name="stop_driving">Stop Driving!!</string>
</resources>
