<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".Homescreen"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">
    <ImageView
        android:src="@mipmap/logo"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/app_name" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:hint="@string/please_enter_the_parent_name"
            android:id="@+id/etNameP"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:hint="@string/please_enter_the_phone_number_only_numerals"
            android:id="@+id/etNumberP"
            android:singleLine="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:inputType="phone" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </LinearLayout>

</LinearLayout>