<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bennyg.pavlokdrivingtrainerv3.MainActivity"
    android:orientation="vertical"
    android:weightSum="1"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="91dp"
        app:srcCompat="@mipmap/logo"
        android:id="@+id/imageView"
        android:layout_weight="0.46" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">

        <EditText
            android:id="@+id/etUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_pavlok_username"
            android:gravity="center_vertical|center"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:gravity="center_vertical|center"
            android:textColor="?android:attr/textColorPrimaryDisableOnly"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:text="@string/sign_in"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnSignIn"
        android:background="@color/colorPrimary"
        android:textAppearance="@android:style/TextAppearance.Material.Button"
        android:layout_marginTop="25dp"
        android:textColor="@color/cardview_light_background" />

    <TextView
        android:text="@string/not_a_user_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvRegister"
        android:layout_weight="0.05"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:gravity="top|center"
        android:paddingTop="15dp"
        android:textColor="@color/common_google_signin_btn_text_light_default" />


</LinearLayout>
