<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.bennyg.pavlokdrivingtrainerv3.message"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="top|center"
        android:layout_height="284dp"
        android:orientation="vertical">
    <TextView
        android:text="@string/please_enter_a_message_to_be_sent_to_people_who_call_you"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:paddingTop="15dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="165dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="129dp"
            android:id="@+id/etMessage"
            android:inputType="textMultiLine|textLongMessage"
            android:maxLines="20"
            android:scrollHorizontally="false"
            android:selectAllOnFocus="false"
            android:hint="@string/please_enter_the_text_message"
            android:paddingTop="10dp" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:text="@string/set_text"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnMessage"
        style="@android:style/Widget.Material.Button"
        android:background="@color/colorPrimary"
        android:textColor="@color/cardview_light_background" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="bottom"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.matthewtamlin.sliding_intro_screen_library.indicators.DotIndicator
            android:layout_width="match_parent"
            android:layout_height="43dp"
            app:unselectedDotDiameter="10dp"
            app:selectedDotColor="@color/colorPrimaryDark"
            app:unselectedDotColor="@color/colorPrimary"
            app:selectedDotDiameter="15dp"
            app:numberOfDots="3"
            app:selectedDotIndex="1"
            android:gravity="bottom" />
    </LinearLayout>

</LinearLayout>
